fixup! Attempt to produce msix packages
Signed-off-by: Taylor Smock <tsmock@meta.com>

git-svn-id: https://josm.openstreetmap.de/svn/trunk@19279 0c6e7542-c601-0410-84e7-c038aed88b3b

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -231,6 +231,7 @@ jobs:
           </MsixPackagingToolTemplate>
           EOF
           # Create msix package
+          winget install "MSIX Packaging Tool"
           MsixPackagingTool.exe create-package --template ConversionTemplate.xml --verbose
 
       - name: Upload macOS app
